force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/BMCServiceDesk__CMDB_Class__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for all CMDB objects.</description>
    <label>CMDB Class</label>
    <nameField>
        <label>Test</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMDB Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>