force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Abstract__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Abstract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No</description>
    <inlineHelpText>Checkbox with default No.  If No, it is a regular class</inlineHelpText>
    <label>Abstract</label>
    <type>Checkbox</type>
</CustomField>