force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Activate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rule Active</label>
    <type>Checkbox</type>
</CustomField>