force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Class_Label__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Class_Label__c</fullName>
    <label>Class Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>