force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__ClassDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClassDescription__c</fullName>
    <label>ClassDescription</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>