force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__ClassName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClassName__c</fullName>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>