force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__ClassType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClassType__c</fullName>
    <label>ClassType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class</fullName>
            </value>
            <value>
                <fullName>Federated Class</fullName>
            </value>
            <value>
                <fullName>Federated Relationship</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>