force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__CMDBClassType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CMDBClassType__c</fullName>
    <description>Used to differentiate between CI and Asset</description>
    <label>CMDB Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CI</fullName>
                <default>true</default>
                <label>CI</label>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>CI and Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>