force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Error_Image__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Error_Image__c</fullName>
    <label>Error Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>