force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Image__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Image__c</fullName>
    <label>Image (32x32)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>