force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Is_Custom_Image__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Is_Custom_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Image</label>
    <type>Checkbox</type>
</CustomField>