force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__IsCustomClass__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsCustomClass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To determine if it is a custom class or out of the box.</description>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>