force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Level__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Level__c</fullName>
    <description>This will denote the level of the class in the class hierarchy</description>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>