force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Namespace__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Namespace__c</fullName>
    <description>Holds the name space of the class - Required</description>
    <label>Namespace</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
</CustomField>