force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Object2__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Object2__c</fullName>
    <label>Object2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>