force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__OSFormName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OSFormName__c</fullName>
    <description>Namespace:Class  Name</description>
    <label>OSFormName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>