force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Role1__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Role1__c</fullName>
    <label>Role1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>