force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__Role2__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Role2__c</fullName>
    <label>Role2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>