force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ShortDescription__c</fullName>
    <label>ShortDescription</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>