force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__SuperClass__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SuperClass__c</fullName>
    <description>Holds the parent class for this class.  How can we implement this field, should it be picklist with all the class names, but what if that class is already a super class.</description>
    <label>Superclass</label>
    <length>80</length>
    <type>Text</type>
</CustomField>