force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__SuperClassID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SuperClassID__c</fullName>
    <description>called Foreign Key Id in CDM</description>
    <label>SuperClassID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>