force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__WeakReference__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__WeakReference__c</fullName>
    <label>WeakReference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>