force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/fields/BMCServiceDesk__WeakRefPropagateAttrs__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__WeakRefPropagateAttrs__c</fullName>
    <label>WeakRefPropagateAttrs</label>
    <length>150</length>
    <type>Text</type>
</CustomField>