force-app/main/default/objects/BMCServiceDesk__CMDB_Class__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__ClassName__c</columns>
    <columns>BMCServiceDesk__ClassID__c</columns>
    <columns>BMCServiceDesk__SuperClass__c</columns>
    <columns>BMCServiceDesk__SuperClassID__c</columns>
    <columns>BMCServiceDesk__Level__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>BMCServiceDesk__Exposure__c</columns>
    <columns>BMCServiceDesk__Abstract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>